<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_reload"
        android:title="@string/menu_reload" />
    <item
        android:id="@+id/menu_login"
        android:title="@string/menu_login" />
    <item
        android:id="@+id/menu_browser"
        android:title="@string/menu_browser" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_desktop"
        android:checkable="true"
        android:title="@string/menu_desktop" />
    <item
        android:id="@+id/menu_dark"
        android:checkable="true"
        android:title="@string/menu_dark" />
    <item
        android:id="@+id/menu_lite"
        android:checkable="true"
        android:title="@string/menu_lite" />
    <item
        android:id="@+id/menu_zoom_reset"
        android:title="@string/menu_zoom_reset" />
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
</menu>
